--- a/layoutweb/BT 5.3.html
+++ b/layoutweb/BT 5.3.html
@@ -53,7 +53,7 @@
                             </h4>
                         </div>
                         <div class="card-body">
-                            <img src="Image/hoodie7.jpg" alt="">
+                            <img src="image/hoodie7.jpg" alt="">
                         </div>
                         <div class="card-footer">
                             <a href="detailsproduct/detailproduct7.html">Xem chi tiết</a>
