--- a/Cá nhân +CV/6.1.3.bt.html
+++ b/Cá nhân +CV/6.1.3.bt.html
@@ -78,10 +78,10 @@
         <section class="aboutme">
             <div class="box4">
                 <h2>ABOUT ME</h2>
-                <P>DD/MM/YY: </P>
-                <p>AGES: </p>
-                <P>COUNTRY: </P>
-                <p>ME</p>
+                <P>DD/MM/YY: 11/10/2005</P>
+                <p>AGES: 18</p>
+                <P>COUNTRY: Việt Nam</P>
+                <p>ME: a lazy guy</p>
             </div>
             <div class="box4">
                 <h2>HOPPY</h2>
