--- a/Btnhom/details.html
+++ b/Btnhom/details.html
@@ -29,8 +29,9 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1><span>BMW</span> X5 M SPORT</h1>
-            <P>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident expedita vero necessitatibus. Aliquid, iure, adipisci eius quidem sed esse expedita at recusandae dolorum ea odit tempore inventore vero? Inventore, officia.</P>
-            <a href="#" class="btn">See more</a>
+            <P>BMW X5 M Sport là một biến thể của dòng xe SUV phổ biến BMW X5, nổi tiếng với sự kết hợp giữa sang trọng, hiệu suất và tính linh hoạt. Gói M Sport thường tăng cường vẻ ngoại hình và khả năng vận hành của xe, mang đến vẻ ngoại thất thể thao thông qua các đặc điểm thiết kế độc đáo, bánh xe lớn hơn và hệ thống treo cứng hơn.
+            </P>
+            <a href="#about" class="btn">See more</a>
         </div>
     </section>
     <secction class="cars" id="cars">
@@ -38,8 +39,8 @@
             <span>
                 All Cars
             </span>
-            <h2>Al types of cars</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, dignissimos.</p>
+            <h2>All types of cars</h2>
+            <p>The most excellent car in world</p>
         </div>
 
         <div class="cars-container container">
@@ -77,8 +78,10 @@
             <div class="about-text">
                 <span>About BMW</span>
                 <h2>Cheap Prices With <br> Quality Cars</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga suscipit officia aut ipsa tempora hic.</p>
-                <a href="#" class="btn">See more here</a>
+                <p>Phiên bản X5 M Sport thường bao gồm các tính năng như ghế thể thao, vô lăng thể thao, các cải tiến về thân xe để tăng tính động học và cải thiện nội thất. Ngoài ra, nó có thể đi kèm với các nâng cấp về hiệu suất, nâng cao động cơ và trải nghiệm lái xe so với phiên bản tiêu chuẩn của X5.<br>
+
+                    Người lái thường đánh giá cao phiên bản M Sport vì cảm giác lái tốt hơn và khả năng xử lý tốt hơn, khiến nó trở nên hấp dẫn hơn trên đường. Tuy nhiên, hệ thống treo cứng hơn có thể làm giảm sự êm ái, đặc biệt là khi di chuyển trên đường xấu.
+                    </p>
             </div>    
         </div>
       
@@ -96,37 +99,37 @@
                 <img src="images/teach1.jpg" alt="">
                 <h3>Má phanh và Đĩa phanh</h3>
                 <a href="https://g7auto.vn/ma-phanh-bmw-1-series" class="btn">View details</a>
-                <i class='bx bxs-star' >(5 Star Recommend)</i>
+                <i class='bx bxs-star' > (5 Star Recommend)</i>
             </div>
             <div class="box">
                 <img src="images/teach2.jpg" alt="">
                 <h3>Bình điện</h3>
                 <a href="https://g7auto.vn/search?query=B%C3%ACnh+%C4%91i%E1%BB%87n+bmw" class="btn">View details</a>
-                <i class='bx bxs-star' >(5 Star Recommend)</i>
+                <i class='bx bxs-star' > (5 Star Recommend)</i>
             </div>
             <div class="box">
                 <img src="images/teach3.jpg" alt="">
                 <h3>Lọc gió</h3>
                 <a href="https://g7auto.vn/search?query=l%E1%BB%8Dc+gi%C3%B3+Bmw" class="btn">View details</a>
-                <i class='bx bxs-star' >(5 Star Recommend)</i>
+                <i class='bx bxs-star' > (5 Star Recommend)</i>
             </div>
             <div class="box">
                 <img src="images/teach4.jpg" alt="">
                 <h3>Cao sư cần gạt mưa</h3>
                 <a href="https://g7auto.vn/can-gat-mua-xe-bmw-1-series" class="btn">View details</a>
-                <i class='bx bxs-star' >(5 Star Recommend)</i>
+                <i class='bx bxs-star' > (5 Star Recommend)</i>
             </div>
             <div class="box">
                 <img src="images/teach5.jpg" alt="">
                 <h3>Đèn hậu</h3>
                 <a href="https://websosanh.vn/s/%C4%91%C3%A8n+h%E1%BA%ADu+bmw.htm" class="btn">View details</a>
-                <i class='bx bxs-star' >(5 Star Recommend)</i>
+                <i class='bx bxs-star' > (5 Star Recommend)</i>
             </div>
             <div class="box">
                 <img src="images/teach6.jpg" alt="">
                 <h3>Phuộc giảm chấn động</h3>
                 <a href="https://websosanh.vn/s/phu%E1%BB%99c+xe+bmw.htm" class="btn">View details</a>
-                <i class='bx bxs-star' >(5 Star Recommend)</i>
+                <i class='bx bxs-star' > (5 Star Recommend)</i>
             </div>
         </div>
 </section>
@@ -134,7 +137,7 @@
     <h1 class="heading"><span>Contact</span> us</h1>
     <div class="row">
 
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4419545443848!2d106.6067179741048!3d10.777423259177224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752c1469d56b3b%3A0x61ebdac0b57ee584!2zMjY0IMSQLiBMw6ogVsSDbiBRdeG7m2ksIELDrG5oIEjGsG5nIEhvw6AgQSwgQsOsbmggVMOibiwgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1701575329902!5m2!1svi!2s" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.650665616816!2d106.67959617485671!3d10.761383189386477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1b8a072901%3A0x2fb4502ebd044212!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBTxrAgcGjhuqFtIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaA!5e0!3m2!1svi!2s!4v1702663074580!5m2!1svi!2s" width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <form action="">
             <h3 data-aos="zoom-in">Tell us something</h3>
             <input data-aos="zoom-in" type="text" placeholder="Your name" class="box">
