--- a/Btnhom/XE 2/details.html
+++ b/Btnhom/XE 2/details.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="nav container">
             <i class='bx bx-menu' id="menu-icon"></i>
-            <a href="#" class="logo">BMW<span>REVIEW</span></a>
+            <a href="https://maffu895.github.io/2311COMP180201-TKWEB-49.01.103.073/B%C3%A0i%20t%E1%BA%ADp%20nh%C3%B3m/HTML/trangchu.html" class="logo">BMW<span>REVIEW</span></a>
             <ul class="navbar">
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#cars">Cars</a></li>
